_generated-doc/1.11/config/quarkus-quartz.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-quartz_configuration]]link:#quarkus-quartz_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.clustered]]`link:#quarkus-quartz_quarkus.quartz.clustered[quarkus.quartz.clustered]`

[.description]
--
Enable cluster mode or not. 
 If enabled make sure to set the appropriate cluster properties.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.cluster-checkin-interval]]`link:#quarkus-quartz_quarkus.quartz.cluster-checkin-interval[quarkus.quartz.cluster-checkin-interval]`

[.description]
--
The frequency (in milliseconds) at which the scheduler instance checks-in with other instances of the cluster.
--|long 
|`15000`


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.store-type]]`link:#quarkus-quartz_quarkus.quartz.store-type[quarkus.quartz.store-type]`

[.description]
--
The type of store to use. 
 When using the `db` store type configuration value make sure that you have the datasource configured. See link:https://quarkus.io/guides/datasource[Configuring your datasource] for more information. 
 To create Quartz tables, you can perform a schema migration via the link:https://quarkus.io/guides/flyway[Flyway extension] using a SQL script matching your database picked from link:https://github.com/quartz-scheduler/quartz/blob/master/quartz-core/src/main/resources/org/quartz/impl/jdbcjobstore[Quartz repository].
--|`ram`, `jdbc-tx`, `jdbc-cmt`, `db` 
|`ram`


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.datasource]]`link:#quarkus-quartz_quarkus.quartz.datasource[quarkus.quartz.datasource]`

[.description]
--
The name of the datasource to use. 
 Optionally needed when using the `db` store type. If not specified, defaults to using the default datasource.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.table-prefix]]`link:#quarkus-quartz_quarkus.quartz.table-prefix[quarkus.quartz.table-prefix]`

[.description]
--
The prefix for quartz job store tables. 
 Ignored if using a `ram` store.
--|string 
|`QRTZ_`


a| [[quarkus-quartz_quarkus.quartz.instance-name]]`link:#quarkus-quartz_quarkus.quartz.instance-name[quarkus.quartz.instance-name]`

[.description]
--
The name of the Quartz instance.
--|string 
|`QuarkusQuartzScheduler`


a| [[quarkus-quartz_quarkus.quartz.thread-count]]`link:#quarkus-quartz_quarkus.quartz.thread-count[quarkus.quartz.thread-count]`

[.description]
--
The size of scheduler thread pool. This will initialize the number of worker threads in the pool.
--|int 
|`25`


a| [[quarkus-quartz_quarkus.quartz.thread-priority]]`link:#quarkus-quartz_quarkus.quartz.thread-priority[quarkus.quartz.thread-priority]`

[.description]
--
Thread priority of worker threads in the pool.
--|int 
|`5`


a| [[quarkus-quartz_quarkus.quartz.start-mode]]`link:#quarkus-quartz_quarkus.quartz.start-mode[quarkus.quartz.start-mode]`

[.description]
--
Scheduler can be started in different modes: normal, forced or halted. By default, the scheduler is not started unless a `io.quarkus.scheduler.Scheduled` business method is found. If set to "forced", scheduler will be started even if no scheduled business methods are found. This is necessary for "pure" programmatic scheduling. Additionally, setting it to "halted" will behave just like forced mode but the scheduler will not start triggering jobs until an explicit start is called from the main scheduler. This is useful to programmatically register listeners before scheduler starts performing some work.
--|`normal`, `forced`, `halted` 
|`normal`


h|[[quarkus-quartz_quarkus.quartz.trigger-listeners-trigger-listeners]]link:#quarkus-quartz_quarkus.quartz.trigger-listeners-trigger-listeners[Trigger listeners]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.trigger-listeners.-listener-name-.class]]`link:#quarkus-quartz_quarkus.quartz.trigger-listeners.-listener-name-.class[quarkus.quartz.trigger-listeners."listener-name".class]`

[.description]
--
Class name for the configuration.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.trigger-listeners.-listener-name-.properties-property-name]]`link:#quarkus-quartz_quarkus.quartz.trigger-listeners.-listener-name-.properties-property-name[quarkus.quartz.trigger-listeners."listener-name".properties]`

[.description]
--

--|`Map<String,String>` 
|


h|[[quarkus-quartz_quarkus.quartz.job-listeners-job-listeners]]link:#quarkus-quartz_quarkus.quartz.job-listeners-job-listeners[Job listeners]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.job-listeners.-listener-name-.class]]`link:#quarkus-quartz_quarkus.quartz.job-listeners.-listener-name-.class[quarkus.quartz.job-listeners."listener-name".class]`

[.description]
--
Class name for the configuration.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.job-listeners.-listener-name-.properties-property-name]]`link:#quarkus-quartz_quarkus.quartz.job-listeners.-listener-name-.properties-property-name[quarkus.quartz.job-listeners."listener-name".properties]`

[.description]
--

--|`Map<String,String>` 
|


h|[[quarkus-quartz_quarkus.quartz.plugins-plugins]]link:#quarkus-quartz_quarkus.quartz.plugins-plugins[Plugins]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.plugins.-plugin-name-.class]]`link:#quarkus-quartz_quarkus.quartz.plugins.-plugin-name-.class[quarkus.quartz.plugins."plugin-name".class]`

[.description]
--
Class name for the configuration.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-quartz_quarkus.quartz.plugins.-plugin-name-.properties-property-name]]`link:#quarkus-quartz_quarkus.quartz.plugins.-plugin-name-.properties-property-name[quarkus.quartz.plugins."plugin-name".properties]`

[.description]
--

--|`Map<String,String>` 
|

|===